Began using Vavr collections in learning tests.